feat: add prog bar logging in new unified L.model via train batch end callback
+ [moai.L] add metrics/losses subdicts
+ [config] rename inner models to modules

--- a/moai/conf/examples/smplifyx/objective.yaml
+++ b/moai/conf/examples/smplifyx/objective.yaml
@@ -165,151 +165,171 @@ model:
               out: [bend]
               weight: 
                 - ${smplifyx.W.S1.w_bend}
-        fine_fit_stage2:
-          # iterations: 30
-          # optimizer: lbfgsls
-          # selectors: [expressive]
-          # scheduler: null
-          # objective:
-            gm:
-              gt: [split_keypoints.body, split_keypoints.face, split_keypoints.hands]
-              pred: [split_joints2d.body, split_joints2d.face, split_joints2d.hands]
-              weights: [split_confidence.body, split_confidence.face, split_confidence.hands]
-              weight: 
-                - ${smplifyx.W.S2.w_joint}
-                - ${smplifyx.W.S2.w_face}
-                - ${smplifyx.W.S2.w_hand}
-              out: [gm_j2d, gm_face, gm_hands]
-            L2:
-              # gt: [null]
-              pred: [embedding, body.betas, body.left_hand, body.right_hand, body.expression, body.jaw]
-              reduction: [sum, sum, sum, sum, sum, sum]              
-              weight: 
-                - ${smplifyx.W.S2.w_pose}
-                - ${smplifyx.W.S2.w_shape}
-                - ${smplifyx.W.S2.w_hand_s}
-                - ${smplifyx.W.S2.w_hand_s}
-                - ${smplifyx.W.S2.w_exp_s}
-                - ${smplifyx.W.S2.w_jaw_s}
-              out: [vposer, shape, lhand, rhand, expr, jaw]
-            hinge_joint_prior:
-              pose: [body.expressive]
-              out: [bend]
-              weight: 
-                - ${smplifyx.W.S2.w_bend}
-        fine_fit_stage3:
-          # iterations: 30
-          # optimizer: lbfgsls
-          # selectors: [expressive]
-          # scheduler: null
-          # objective:
-            gm:
-              gt: [split_keypoints.body, split_keypoints.face, split_keypoints.hands]
-              pred: [split_joints2d.body, split_joints2d.face, split_joints2d.hands]
-              weights: [split_confidence.body, split_confidence.face, split_confidence.hands]
-              weight: 
-                - ${smplifyx.W.S3.w_joint}
-                - ${smplifyx.W.S3.w_face}
-                - ${smplifyx.W.S3.w_hand}
-              out: [gm_j2d, gm_face, gm_hands]
-            L2:
-              # gt: [null]
-              pred: [embedding, body.betas, body.left_hand, body.right_hand, body.expression, body.jaw]
-              reduction: [sum, sum, sum, sum, sum, sum]              
-              weight: 
-                - ${smplifyx.W.S3.w_pose}
-                - ${smplifyx.W.S3.w_shape}
-                - ${smplifyx.W.S3.w_hand_s}
-                - ${smplifyx.W.S3.w_hand_s}
-                - ${smplifyx.W.S3.w_exp_s}
-                - ${smplifyx.W.S3.w_jaw_s}
-              out: [vposer, shape, lhand, rhand, expr, jaw]
-            hinge_joint_prior:
-              pose: [body.expressive]
-              out: [bend]
-              weight: 
-                - ${smplifyx.W.S3.w_bend}
-        fine_fit_stage4:
-          # iterations: 30
-          # optimizer: lbfgsls
-          # selectors: [expressive]
-          # scheduler: null
-          # objective:
-            gm:
-              gt: [split_keypoints.body, split_keypoints.face, split_keypoints.hands]
-              pred: [split_joints2d.body, split_joints2d.face, split_joints2d.hands]
-              weights: [split_confidence.body, split_confidence.face, split_confidence.hands]
-              weight: 
-                - ${smplifyx.W.S4.w_joint}
-                - ${smplifyx.W.S4.w_face}
-                - ${smplifyx.W.S4.w_hand}
-              out: [gm_j2d, gm_face, gm_hands]
-            L2:
-              # gt: [null]
-              pred: [embedding, body.betas, body.left_hand, body.right_hand, body.expression, body.jaw]
-              reduction: [sum, sum, sum, sum, sum, sum]              
-              weight: 
-                - ${smplifyx.W.S4.w_pose}
-                - ${smplifyx.W.S4.w_shape}
-                - ${smplifyx.W.S4.w_hand_s}
-                - ${smplifyx.W.S4.w_hand_s}
-                - ${smplifyx.W.S4.w_exp_s}
-                - ${smplifyx.W.S4.w_jaw_s}
-              out: [vposer, shape, lhand, rhand, expr, jaw]
-            hinge_joint_prior:
-              pose: [body.expressive]
-              out: [bend]
-              weight: 
-                - ${smplifyx.W.S4.w_bend}
-        fine_fit_stage5:
-          # iterations: 30
-          # optimizer: lbfgsls
-          # selectors: [expressive]
-          # scheduler: null
-          # objective:
-            gm:
-              gt: [split_keypoints.body, split_keypoints.face, split_keypoints.hands]
-              pred: [split_joints2d.body, split_joints2d.face, split_joints2d.hands]
-              weights: [split_confidence.body, split_confidence.face, split_confidence.hands]
-              weight: 
-                - ${smplifyx.W.S5.w_joint}
-                - ${smplifyx.W.S5.w_face}
-                - ${smplifyx.W.S5.w_hand}
-              out: [gm_j2d, gm_face, gm_hands]
-            L2:
-              # gt: [null]
-              pred: [embedding, body.betas, body.left_hand, body.right_hand, body.expression, body.jaw]
-              reduction: [sum, sum, sum, sum, sum, sum]              
-              weight: 
-                - ${smplifyx.W.S5.w_pose}
-                - ${smplifyx.W.S5.w_shape}
-                - ${smplifyx.W.S5.w_hand_s}
-                - ${smplifyx.W.S5.w_hand_s}
-                - ${smplifyx.W.S5.w_exp_s}
-                - ${smplifyx.W.S5.w_jaw_s}
-              out: [vposer, shape, lhand, rhand, expr, jaw]
-            hinge_joint_prior:
-              pose: [body.expressive]
-              out: [bend]
-              weight: 
-                - ${smplifyx.W.S5.w_bend}
-            # interpenetration:
-            #   vertices: [body.vertices]
-            #   faces: [body.faces]
-            #   weight: 
-            #     - ${smplifyx.W.S5.w_pen}
-            #   out: [pen]
+        # fine_fit_stage2:
+        #   # iterations: 30
+        #   # optimizer: lbfgsls
+        #   # selectors: [expressive]
+        #   # scheduler: null
+        #   # objective:
+        #     gm:
+        #       gt: [split_keypoints.body, split_keypoints.face, split_keypoints.hands]
+        #       pred: [split_joints2d.body, split_joints2d.face, split_joints2d.hands]
+        #       weights: [split_confidence.body, split_confidence.face, split_confidence.hands]
+        #       weight: 
+        #         - ${smplifyx.W.S2.w_joint}
+        #         - ${smplifyx.W.S2.w_face}
+        #         - ${smplifyx.W.S2.w_hand}
+        #       out: [gm_j2d, gm_face, gm_hands]
+        #     L2:
+        #       # gt: [null]
+        #       pred: [embedding, body.betas, body.left_hand, body.right_hand, body.expression, body.jaw]
+        #       reduction: [sum, sum, sum, sum, sum, sum]              
+        #       weight: 
+        #         - ${smplifyx.W.S2.w_pose}
+        #         - ${smplifyx.W.S2.w_shape}
+        #         - ${smplifyx.W.S2.w_hand_s}
+        #         - ${smplifyx.W.S2.w_hand_s}
+        #         - ${smplifyx.W.S2.w_exp_s}
+        #         - ${smplifyx.W.S2.w_jaw_s}
+        #       out: [vposer, shape, lhand, rhand, expr, jaw]
+        #     hinge_joint_prior:
+        #       pose: [body.expressive]
+        #       out: [bend]
+        #       weight: 
+        #         - ${smplifyx.W.S2.w_bend}
+        # fine_fit_stage3:
+        #   # iterations: 30
+        #   # optimizer: lbfgsls
+        #   # selectors: [expressive]
+        #   # scheduler: null
+        #   # objective:
+        #     gm:
+        #       gt: [split_keypoints.body, split_keypoints.face, split_keypoints.hands]
+        #       pred: [split_joints2d.body, split_joints2d.face, split_joints2d.hands]
+        #       weights: [split_confidence.body, split_confidence.face, split_confidence.hands]
+        #       weight: 
+        #         - ${smplifyx.W.S3.w_joint}
+        #         - ${smplifyx.W.S3.w_face}
+        #         - ${smplifyx.W.S3.w_hand}
+        #       out: [gm_j2d, gm_face, gm_hands]
+        #     L2:
+        #       # gt: [null]
+        #       pred: [embedding, body.betas, body.left_hand, body.right_hand, body.expression, body.jaw]
+        #       reduction: [sum, sum, sum, sum, sum, sum]              
+        #       weight: 
+        #         - ${smplifyx.W.S3.w_pose}
+        #         - ${smplifyx.W.S3.w_shape}
+        #         - ${smplifyx.W.S3.w_hand_s}
+        #         - ${smplifyx.W.S3.w_hand_s}
+        #         - ${smplifyx.W.S3.w_exp_s}
+        #         - ${smplifyx.W.S3.w_jaw_s}
+        #       out: [vposer, shape, lhand, rhand, expr, jaw]
+        #     hinge_joint_prior:
+        #       pose: [body.expressive]
+        #       out: [bend]
+        #       weight: 
+        #         - ${smplifyx.W.S3.w_bend}
+        # fine_fit_stage4:
+        #   # iterations: 30
+        #   # optimizer: lbfgsls
+        #   # selectors: [expressive]
+        #   # scheduler: null
+        #   # objective:
+        #     gm:
+        #       gt: [split_keypoints.body, split_keypoints.face, split_keypoints.hands]
+        #       pred: [split_joints2d.body, split_joints2d.face, split_joints2d.hands]
+        #       weights: [split_confidence.body, split_confidence.face, split_confidence.hands]
+        #       weight: 
+        #         - ${smplifyx.W.S4.w_joint}
+        #         - ${smplifyx.W.S4.w_face}
+        #         - ${smplifyx.W.S4.w_hand}
+        #       out: [gm_j2d, gm_face, gm_hands]
+        #     L2:
+        #       # gt: [null]
+        #       pred: [embedding, body.betas, body.left_hand, body.right_hand, body.expression, body.jaw]
+        #       reduction: [sum, sum, sum, sum, sum, sum]              
+        #       weight: 
+        #         - ${smplifyx.W.S4.w_pose}
+        #         - ${smplifyx.W.S4.w_shape}
+        #         - ${smplifyx.W.S4.w_hand_s}
+        #         - ${smplifyx.W.S4.w_hand_s}
+        #         - ${smplifyx.W.S4.w_exp_s}
+        #         - ${smplifyx.W.S4.w_jaw_s}
+        #       out: [vposer, shape, lhand, rhand, expr, jaw]
+        #     hinge_joint_prior:
+        #       pose: [body.expressive]
+        #       out: [bend]
+        #       weight: 
+        #         - ${smplifyx.W.S4.w_bend}
+        # fine_fit_stage5:
+        #   # iterations: 30
+        #   # optimizer: lbfgsls
+        #   # selectors: [expressive]
+        #   # scheduler: null
+        #   # objective:
+        #     gm:
+        #       gt: [split_keypoints.body, split_keypoints.face, split_keypoints.hands]
+        #       pred: [split_joints2d.body, split_joints2d.face, split_joints2d.hands]
+        #       weights: [split_confidence.body, split_confidence.face, split_confidence.hands]
+        #       weight: 
+        #         - ${smplifyx.W.S5.w_joint}
+        #         - ${smplifyx.W.S5.w_face}
+        #         - ${smplifyx.W.S5.w_hand}
+        #       out: [gm_j2d, gm_face, gm_hands]
+        #     L2:
+        #       # gt: [null]
+        #       pred: [embedding, body.betas, body.left_hand, body.right_hand, body.expression, body.jaw]
+        #       reduction: [sum, sum, sum, sum, sum, sum]              
+        #       weight: 
+        #         - ${smplifyx.W.S5.w_pose}
+        #         - ${smplifyx.W.S5.w_shape}
+        #         - ${smplifyx.W.S5.w_hand_s}
+        #         - ${smplifyx.W.S5.w_hand_s}
+        #         - ${smplifyx.W.S5.w_exp_s}
+        #         - ${smplifyx.W.S5.w_jaw_s}
+        #       out: [vposer, shape, lhand, rhand, expr, jaw]
+        #     hinge_joint_prior:
+        #       pose: [body.expressive]
+        #       out: [bend]
+        #       weight: 
+        #         - ${smplifyx.W.S5.w_bend}
+        #     # interpenetration:
+        #     #   vertices: [body.vertices]
+        #     #   faces: [body.faces]
+        #     #   weight: 
+        #     #     - ${smplifyx.W.S5.w_pen}
+        #     #   out: [pen]
       process:
-        step:
-          initialialize_torso:
-            steps:
-              - preprocess
-              - initialize_translation
-          initial_torso_fit:
-            iterations: 5
-            optimizer: initial_torso_fit
-            # scheduler: null
-            steps:
-              - preprocess
-              - postprocess
-            objective: initial_torso_fit
+        fit:
+          batch:
+            initialize_torso:
+              steps: # graphs
+                - preprocess
+                - initialize_translation
+            initial_torso_fit:
+              iterations: 5
+              optimizer: initial_torso_fit
+              # scheduler: null
+              steps:
+                - preprocess
+                - postprocess
+              objective: initial_torso_fit
+        # predict:
+        # val:
+        # test:
+      monitor:
+        fit:
+          step:
+            show_optimization:
+              frequency: 1
+              steps:
+                - show_mesh
+          batch:
+            log_results:
+              frequency: 1
+              steps: []
+              metrics:
+                - fit_quality
+              
+                # - save_mask
+
