--- a/moai/conf/examples/smplifyx/metrics.yaml
+++ b/moai/conf/examples/smplifyx/metrics.yaml
@@ -1,7 +1,11 @@
 # @package _global_
 
 model:
-  validation:
-    rmse:
-      gt: [keypoints]
-      pred: [joints2d]
+  # validation:
+
+  monitoring:
+    metrics:
+      fit_quality:
+        rmse:
+          gt: [keypoints]
+          pred: [joints2d]
