--- a/moai/conf/examples/smplifyx/objective.yaml
+++ b/moai/conf/examples/smplifyx/objective.yaml
@@ -327,7 +327,7 @@ model:
           batch:
             log_results:
               frequency: 1
-              steps: []
+              # steps: []
               metrics:
                 - fit_quality
               
