feat: step-based tensor monitoring
! fix shuffle on train loader for the test fitting use case
+ add tensor monitoring reflector
~ update pkl iterative fitting exporter

--- a/moai/conf/examples/smplifyx/data.yaml
+++ b/moai/conf/examples/smplifyx/data.yaml
@@ -5,7 +5,9 @@ FOLDER: ???
 
 data:
   train:
-    iterator:      
+    loader:
+      shuffle: false
+    iterator:
       datasets:
         openpose:
           image_glob: ${openpose_root}\${FOLDER}\images\*.jp*g
