--- a/moai/conf/examples/smplifyx/fit.yaml
+++ b/moai/conf/examples/smplifyx/fit.yaml
@@ -7,6 +7,7 @@ defaults:
   - engine: engine
   - engine/fit: lightning
   - engine/modules: manual_seed
+  - engine/modules: rerun
 
   - engine/visualization: collection
   # - engine/visualization/visdom: vector
@@ -72,6 +73,7 @@ defaults:
   - model/validation/metric: rmse
 
   - engine/monitor/exporting/local: pkl
+  - engine/monitor/visualization/rerun: mesh
 
   - examples/smplifyx/data
   - examples/smplifyx/options
