build: bump hydra to 1.1
~ updated initial config definition
~ some instantiations needed false recursive
! there is a bug w/ backslashes and interpolation
~ same group configs need to be defined in a list in the main config at the defaults section
~ relative config files need to be specified relative to the main config file
~ some instantiations were skipped w/ recursive instantiate
! dictconfigs get unwrapped to dicts when used as `**kwargs`

--- a/moai/conf/examples/smplifyx/data.yaml
+++ b/moai/conf/examples/smplifyx/data.yaml
@@ -10,7 +10,7 @@ data:
     iterator:
       datasets:
         openpose:
-          image_glob: ${openpose_root}\${FOLDER}\images\*.jp*g
+          image_glob: ${openpose_root}/${FOLDER}/images/*.jp*g
           load_face: true
           load_hands: true
           load_face_contour: false
@@ -21,7 +21,7 @@ data:
     iterator:
       datasets:
         openpose:
-          image_glob: ${openpose_root}\${FOLDER}\images\*.jp*g
+          image_glob: ${openpose_root}/${FOLDER}/images/*.jp*g
           load_face: true
           load_hands: true
           load_face_contour: false
@@ -32,7 +32,7 @@ data:
     iterator:
       datasets:
         openpose:
-            image_glob: ${openpose_root}\${FOLDER}\images\*.jp*g
+            image_glob: ${openpose_root}/${FOLDER}/images/*.jp*g
             load_face: true
             load_hands: true
             load_face_contour: false
