--- a/moai/conf/examples/smplifyx/objective.yaml
+++ b/moai/conf/examples/smplifyx/objective.yaml
@@ -67,57 +67,57 @@ model:
         part_segmentation: ${SMPLX_ROOT}\smpl_segmentation.pkl
   parameters:
     optimization:
-      # helpers:
-        # common: &lbfgsls
-        #   type: lbfgsls
-        #   params:
-        #     max_iter: 30
-        #     lr: 1.0
+      helpers:
+        common: &lbfgsls
+          type: lbfgsls
+          params:
+            max_iter: 30
+            lr: 1.0
       optimizers:
       #   lbfgsls:
       #     max_iter: 30
         named:
           initial_torso_fit: 
-            # <<: *lbfgsls #NOTE: fixed in omegaconf 2.1.0
-            type: lbfgsls
-            params:
-              max_iter: 30
-              lr: 1.0
+            <<: *lbfgsls #NOTE: fixed in omegaconf 2.1.0
+            # type: lbfgsls
+            # params:
+            #   max_iter: 30
+            #   lr: 1.0
             selectors: global
           fine_fit_stage1:
-            # <<: *lbfgsls #NOTE: fixed in omegaconf 2.1.0
-            type: lbfgsls
-            params:
-              max_iter: 30
-              lr: 1.0
+            <<: *lbfgsls #NOTE: fixed in omegaconf 2.1.0
+            # type: lbfgsls
+            # params:
+            #   max_iter: 30
+            #   lr: 1.0
             selectors: [global, expressive]
           fine_fit_stage2:
-            # <<: *lbfgsls #NOTE: fixed in omegaconf 2.1.0
-            type: lbfgsls
-            params:
-              max_iter: 30
-              lr: 1.0
+            <<: *lbfgsls #NOTE: fixed in omegaconf 2.1.0
+            # type: lbfgsls
+            # params:
+            #   max_iter: 30
+            #   lr: 1.0
             selectors: [expressive]
           fine_fit_stage3:
-            # <<: *lbfgsls #NOTE: fixed in omegaconf 2.1.0
-            type: lbfgsls
-            params:
-              max_iter: 30
-              lr: 1.0
+            <<: *lbfgsls #NOTE: fixed in omegaconf 2.1.0
+            # type: lbfgsls
+            # params:
+            #   max_iter: 30
+            #   lr: 1.0
             selectors: [expressive]
           fine_fit_stage4:
-            # <<: *lbfgsls #NOTE: fixed in omegaconf 2.1.0
-            type: lbfgsls
-            params:
-              max_iter: 30
-              lr: 1.0
+            <<: *lbfgsls #NOTE: fixed in omegaconf 2.1.0
+            # type: lbfgsls
+            # params:
+            #   max_iter: 30
+            #   lr: 1.0
             selectors: [expressive]
           fine_fit_stage5:
-            # <<: *lbfgsls #NOTE: fixed in omegaconf 2.1.0
-            type: lbfgsls
-            params:
-              max_iter: 30
-              lr: 1.0
+            <<: *lbfgsls #NOTE: fixed in omegaconf 2.1.0
+            # type: lbfgsls
+            # params:
+            #   max_iter: 30
+            #   lr: 1.0
             selectors: [expressive]
       objectives:
         initial_torso_fit:
