--- a/moai/conf/model/manual.yaml
+++ b/moai/conf/model/manual.yaml
@@ -1,7 +1,7 @@
 # @package model
 
 _target_: moai.networks.lightning.manual.Manual
-configuration:
-  mode: inference
-  io: ???
-  assign: null
+# configuration:
+#   mode: inference
+#   io: ???
+#   assign: null
