build: bump hydra to `1.2`
+ force cur dir changing at each job (was implicitly True, became implicitly False, need to force back to True)
~ need to update the hydra/colorlog pkg too: ` pip install hydra_colorlog --upgrade`
~ replace `_name_` in configs w/ actual name
! start forcing all modules to resolve at the inner-most level

BREAKING CHANGES

--- a/moai/conf/data/train/dataset/human/pose/openpose.yaml
+++ b/moai/conf/data/train/dataset/human/pose/openpose.yaml
@@ -1,6 +1,6 @@
-# @package data.train.iterator.datasets._name_
+# @package data.train.iterator.datasets.openpose
 
-_target_: moai.data.datasets.human.pose.OpenPoseInferred
+_target_: moai.data.datasets.human.pose.openpose.OpenPoseInferred
 image_glob: ???
 load_hands: false
 load_face: false
