--- a/moai/conf/remodel/module_mode.yaml
+++ b/moai/conf/remodel/module_mode.yaml
@@ -1,4 +1,4 @@
-# @package remodel._name_
+# @package remodel.module_mode
 
-_target_: moai.remodel.ModuleMode
+_target_: moai.remodel.module_mode.ModuleMode
 modules: ???
