--- a/moai/conf/examples/smplifyx/fit.yaml
+++ b/moai/conf/examples/smplifyx/fit.yaml
@@ -1,8 +1,4 @@
 defaults:
-  ###### HYDRA  
-  - hydra/job_logging: colorlog
-  - hydra/hydra_logging: colorlog
-
   ###### ENGINE
   - engine: engine
   - engine/fit: lightning
@@ -72,18 +68,18 @@ defaults:
 
   - engine/monitor/exporting/local: pkl
   - engine/monitor/visualization/rerun: mesh
-
-  # - examples/smplifyx/data
-  # - examples/smplifyx/options
-  # - examples/smplifyx/model
-  # - examples/smplifyx/metrics
-  # - examples/smplifyx/objective
   
-
   - data
   - options
   - model
   - metrics
   - objective
+  
+  - override hydra/hydra_logging: colorlog
+  - override hydra/job_logging: colorlog
+  
+  # _self_
+  ###### HYDRA  
 
+  
   # - override model/parameters/selectors/human/body: expressive
