--- a/moai/conf/model/monads/human/body/initialize_translation.yaml
+++ b/moai/conf/model/monads/human/body/initialize_translation.yaml
@@ -1,6 +1,6 @@
-# @package model.modules._name_
+# @package model.modules.initialize_translation
 
-_target_: moai.monads.human.body.InitTranslation
+_target_: moai.monads.human.body.init_translation.InitTranslation
 torso_edge_indices:
   - [5, 12]
   - [2, 9]
