--- a/moai/conf/model/monads/human/body/smplx.yaml
+++ b/moai/conf/model/monads/human/body/smplx.yaml
@@ -1,6 +1,6 @@
-# @package model.monads._name_
+# @package model.monads.smplx
 
-_target_: moai.monads.human.body.smpl.SMPLX
+_target_: moai.monads.human.body.smpl.smplx.SMPLX
 model_path: ???
 joints_format: none
 gender: neutral
