--- a/moai/conf/model/parameters/initialization/custom/vposer2.yaml
+++ b/moai/conf/model/parameters/initialization/custom/vposer2.yaml
@@ -1,5 +1,5 @@
-# @package model.parameters.initialization.schemes._name_
+# @package model.parameters.initialization.schemes.vposer2
 
-_target_: moai.parameters.initialization.custom.VPoser2
+_target_: moai.parameters.initialization.custom.vposer2.VPoser2
 ckpt: ???
 cache: false
