--- a/moai/conf/model/supervision/loss/regression/L2.yaml
+++ b/moai/conf/model/supervision/loss/regression/L2.yaml
@@ -1,3 +1,3 @@
-# @package model.supervision.losses._name_
+# @package model.supervision.losses.L2
 
-_target_: moai.supervision.losses.regression.L2
+_target_: moai.supervision.losses.regression.L2.L2
