feat: tensor monitoring supports funcs & iterative call definitions
! both the stateful (object ctor based) and stateless (func partials) are now supported
! it is necessary for the conf arguments to be lists atm

--- a/moai/conf/examples/smplifyx/fit.yaml
+++ b/moai/conf/examples/smplifyx/fit.yaml
@@ -66,8 +66,8 @@ defaults:
   - model/validation: collection
   - model/validation/metric: rmse
 
-  - engine/monitor/exporting/local: pkl
-  - engine/monitor/visualization/rerun: mesh
+  - engine/monitor/exporting/local: [pkl, append_pkl]
+  - engine/monitor/visualization/rerun: [mesh, mesh3d]
   
   - data
   - options
