--- a/moai/conf/engine/monitor/exporting/local/pkl.yaml
+++ b/moai/conf/engine/monitor/exporting/local/pkl.yaml
@@ -1,6 +1,6 @@
 # @package monitoring.tensors.pkl
 
-_target_: moai.export.local.Pkl
+_target_: moai.export.local.pkl.Pkl
 mode: append # [all, append]
 keys: ???
 path: ???
