--- a/moai/conf/examples/smplifyx/metrics.yaml
+++ b/moai/conf/examples/smplifyx/metrics.yaml
@@ -11,6 +11,21 @@ model:
           pred: [joints2d]
     tensors:
       save_params:
+        append_pkl:
+          path: ['.', '.hydra']
+          keys: 
+            -
+              - translation
+              - embedding
+              - body.betas
+              - body.rotation
+              - body.left_hand
+              - body.right_hand
+              - body.jaw
+              - body.pose
+              - body.expression
+            - 
+              - body.pose
         pkl:
           params:
             path: '.'
@@ -26,22 +41,27 @@ model:
               - body.expression
       show_mesh_step:
         mesh:
-          vertices: body.vertices
-          faces: body.faces
+          vertices: [body.vertices]
+          faces: [body.faces]
           params:
             color: green
             path: fit/body/mesh/step
+        mesh3d:
+          vertices: [body.vertices, body.vertices]
+          faces: [body.faces, body.faces]
+          color: [green, blue]
+          path: [fit/body/mesh/step, fit/body/mesh/step2]
       show_mesh_iter:
         mesh:
-          vertices: body.vertices
-          faces: body.faces
+          vertices: [body.vertices]
+          faces: [body.faces]
           params:
             color: cyan
             path: fit/body/mesh/iter
       show_mesh_batch:
         mesh:
-          vertices: body.vertices
-          faces: body.faces
+          vertices: [body.vertices]
+          faces: [body.faces]
           params:
             color: red
             path: fit/body/mesh/batch
