--- a/moai/conf/model/supervision/loss/regression/L1.yaml
+++ b/moai/conf/model/supervision/loss/regression/L1.yaml
@@ -1,5 +1,5 @@
-# @package model.supervision.losses._name_
+# @package model.supervision.losses.L1
 
-_target_: moai.supervision.losses.regression.L1
+_target_: moai.supervision.losses.regression.L1.L1
 mode: raw # one of [raw, ln, log]
 bias: 0.0
