--- a/moai/conf/model/monads/generation/tensor/random.yaml
+++ b/moai/conf/model/monads/generation/tensor/random.yaml
@@ -1,6 +1,6 @@
-# @package model.monads._name_
+# @package model.monads.random
 
-_target_: moai.monads.generation.tensor.Random
+_target_: moai.monads.generation.tensor.torch.Random
 shape: ???
 mode: unit # one of [unit, normal]
 scale: 1.0
