--- a/moai/conf/model/monads/generation/tensor/random_like.yaml
+++ b/moai/conf/model/monads/generation/tensor/random_like.yaml
@@ -1,5 +1,5 @@
-# @package model.monads._name_
+# @package model.monads.random_like
 
-_target_: moai.monads.generation.tensor.RandomLike
+_target_: moai.monads.generation.tensor.torch.RandomLike
 mode: unit # one of [unit, normal]
 scale: 1.0
