--- a/moai/conf/model/monads/generation/tensor/scalar.yaml
+++ b/moai/conf/model/monads/generation/tensor/scalar.yaml
@@ -1,4 +1,4 @@
-# @package model.monads._name_
+# @package model.monads.scalar
 
-_target_: moai.monads.generation.tensor.Scalar
+_target_: moai.monads.generation.tensor.torch.Scalar
 value: ???
