--- a/moai/conf/model/monads/generation/tensor/zeros.yaml
+++ b/moai/conf/model/monads/generation/tensor/zeros.yaml
@@ -1,5 +1,5 @@
-# @package model.monads._name_
+# @package model.monads.zeros
 
-_target_: moai.monads.generation.tensor.Zeros
+_target_: moai.monads.generation.tensor.torch.Zeros
 shape: ???
 includes_batch: false
