--- a/moai/conf/model/monads/generation/tensor/zeros_like.yaml
+++ b/moai/conf/model/monads/generation/tensor/zeros_like.yaml
@@ -1,3 +1,3 @@
-# @package model.monads._name_
+# @package model.monads.zeros_like
 
-_target_: moai.monads.generation.tensor.ZerosLike
+_target_: moai.monads.generation.tensor.torch.ZerosLike
