--- a/moai/conf/model/monads/generative/fake_history.yaml
+++ b/moai/conf/model/monads/generative/fake_history.yaml
@@ -1,4 +1,4 @@
-# @package model.monads._name_
+# @package model.monads.fake_history
 
 _target_: moai.monads.generative.fake_history.FakeHistory
 history_size: ???
