--- a/moai/conf/model/monads/geometry/rotation/gram_schmidt.yaml
+++ b/moai/conf/model/monads/geometry/rotation/gram_schmidt.yaml
@@ -1,3 +1,3 @@
-# @package model.monads._name_
+# @package model.monads.gram_schmidt
 
-_target_: moai.monads.geometry.rotations.GramSchmidt
+_target_: moai.monads.geometry.rotations.gram_schmidt.GramSchmidt
