--- a/moai/conf/model/monads/math/alpha_blend.yaml
+++ b/moai/conf/model/monads/math/alpha_blend.yaml
@@ -1,4 +1,4 @@
-# @package model.monads._name_
+# @package model.monads.alpha_blend
 
 _target_: moai.monads.math.alpha_blend.AlphaBlend
 blend: null
