--- a/moai/conf/model/monads/math/matrix_transpose.yaml
+++ b/moai/conf/model/monads/math/matrix_transpose.yaml
@@ -1,3 +1,3 @@
-# @package model.monads._name_
+# @package model.monads.matrix_transpose
 
-_target_: moai.monads.math.MatrixTranspose
+_target_: moai.monads.math.common.MatrixTranspose
