--- a/moai/conf/model/monads/tensor/alias.yaml
+++ b/moai/conf/model/monads/tensor/alias.yaml
@@ -1,3 +1,3 @@
-# @package model.monads._name_
+# @package model.monads.alias
 
-_target_: moai.monads.tensor.Alias
+_target_: moai.monads.tensor.torch.Alias
