--- a/moai/conf/model/parameters/selectors/discriminator.yaml
+++ b/moai/conf/model/parameters/selectors/discriminator.yaml
@@ -1,5 +1,5 @@
-# @package model.parameters.selectors._name_
+# @package model.parameters.selectors.discriminator
 
-_target_: moai.parameters.selectors.ModuleParameterSelector
+_target_: moai.parameters.selectors.ModelParameterSelector
 keys:
   - discriminator
