--- a/moai/conf/model/supervision/loss/generative/gradient_penalty.yaml
+++ b/moai/conf/model/supervision/loss/generative/gradient_penalty.yaml
@@ -1,3 +1,3 @@
-# @package model.supervision.losses._name_
+# @package model.supervision.losses.gradient_penalty
 
 _target_: moai.supervision.losses.generative.gradient_penalty.GradientPenalty
