--- a/moai/conf/model/validation/metric/rmse.yaml
+++ b/moai/conf/model/validation/metric/rmse.yaml
@@ -1,3 +1,3 @@
-# @package model.validation.metrics._name_
+# @package model.validation.metrics.rmse
 
-_target_: moai.validation.metrics.RMSE
+_target_: moai.validation.metrics.common.rmse.RMSE
