--- a/moai/conf/examples/smplifyx/objective.yaml
+++ b/moai/conf/examples/smplifyx/objective.yaml
@@ -314,8 +314,49 @@ model:
                 - preprocess
                 - postprocess
               objective: initial_torso_fit
+          # epoch:
+          #   termination: 
+            # - milestone: 30
+            #   batch:
+            #     initialize_torso:
+            #       steps: # graphs
+            #         - preprocess
+            #         - initialize_translation
+            #     initial_torso_fit:
+            #       iterations: 5
+            #       optimizer: initial_torso_fit
+            #       # scheduler: null
+            #       steps:
+            #         - preprocess
+            #         - postprocess
+            #       objective: initial_torso_fit
+            # - milestone: 40
+            #   batch:                  
+            #     initial_torso_fit:
+            #       iterations: 1
+            #       optimizer: initial_torso_fit
+            #       # scheduler: null
+            #       steps:
+            #         - preprocess
+            #       objective: initial_torso_fit
         # predict:
-        # val:
+        val:
+          batch:
+            dataset1: &val
+              metrics: [rmse, fid]
+              steps: [autoencode, sample]
+              termination: []
+              tensors: [show_autoencoded]
+            dataset2:
+              metrics: [rmse]
+              steps: [autoencode]
+              termination: [bad_fit]
+              tensors: [show_autoencoded]
+          epoch:
+            metrics: []
+            steps: [traversal]
+            termination: []
+            tensors: [show_traversals]
         # test:
       monitor:
         fit:
