factor: introduce moai.core
~ move tensor monitoring to moai.core
~ move monad graphs to moai.core
~ move model graphs to moai.core
~ move term criteria to moai.core
~ move the generic manual optimization model to moai.core
~ start deprecating old code by `_` prefixing

--- a/moai/conf/examples/smplifyx/fit.yaml
+++ b/moai/conf/examples/smplifyx/fit.yaml
@@ -32,7 +32,7 @@ defaults:
   - data/val/dataset/human/pose: openpose
 
   # ###### MODEL 
-  - model: manual
+  - model: moai # manual
   # - model/monads/human/body: init_translation
   - model/monads/human/body: [initialize_translation, smplx]
   - remodel: module_mode
