draft: add grammar & plugin
+ also add benedict

--- a/moai/conf/examples/smplifyx/model.yaml
+++ b/moai/conf/examples/smplifyx/model.yaml
@@ -59,7 +59,8 @@ model:
         void: [color]
         out: [embedding]
       translation:
-        void: [color]
+        void: 
+          - color # ${mi:color}
         out: [translation]
       betas:
         void: [color]
