feat: simplify monad graph creation

--- a/moai/conf/examples/smplifyx/model.yaml
+++ b/moai/conf/examples/smplifyx/model.yaml
@@ -60,7 +60,8 @@ model:
         out: [embedding]
       translation:
         void: 
-          - color # ${mi:color}
+          # - color
+          - ${mi:color}
         out: [translation]
       betas:
         void: [color]
