feat (validation): 2nd version of the validation pipeline + minor monad-related updates
- only FID and DIV have been integrated
- the csv logs are still per metric (need to check `log_dict` again)
- tested with max_epochs=3

--- a/moai/conf/model/monads/tensor/concat.yaml
+++ b/moai/conf/model/monads/tensor/concat.yaml
@@ -1,4 +1,4 @@
-# @package model.monads._name_
+# @package model.monads.concat
 
-_target_: moai.monads.tensor.Concat
+_target_: moai.monads.tensor.torch.Concat
 dim: 1
