--- a/moai/conf/model/monads/geometry/rotation/roma_rotmat_to_sixd.yaml
+++ b/moai/conf/model/monads/geometry/rotation/roma_rotmat_to_sixd.yaml
@@ -1,3 +1,3 @@
-# @package model.monads._name_
+# @package model.monads.roma_rotmat_to_sixd
 
-_target_: moai.monads.geometry.rotations.RomaExtractSixd
+_target_: moai.monads.geometry.rotations.gram_schmidt.ExtractSixd
