--- a/moai/conf/model/monads/geometry/rotation/rotmat_to_unitquat.yaml
+++ b/moai/conf/model/monads/geometry/rotation/rotmat_to_unitquat.yaml
@@ -1,3 +1,3 @@
-# @package model.monads._name_
+# @package model.monads.rotmat_to_unitquat
 
-_target_: moai.monads.geometry.rotations.RotationMatrix2Quaternion
+_target_: moai.monads.geometry.rotations.conversions.RotationMatrix2Quaternion
