--- a/moai/conf/model/monads/tensor/squeeze.yaml
+++ b/moai/conf/model/monads/tensor/squeeze.yaml
@@ -1,3 +1,3 @@
-# @package model.monads._name_
+# @package model.monads.squeeze
 
-_target_: moai.monads.tensor.Squeeze
+_target_: moai.monads.tensor.torch.Squeeze
