--- a/moai/conf/model/validation/metric/generation/diversity.yaml
+++ b/moai/conf/model/validation/metric/generation/diversity.yaml
@@ -1,3 +1,3 @@
-# @package model.validation.generation.metrics._name_
+# @package model.validation.generation.metrics.diversity
 
-_target_: moai.validation.metrics.generation.Diversity
+_target_: moai.validation.metrics.generation.diversity.Diversity
