--- a/moai/conf/model/validation/metric/generation/fid.yaml
+++ b/moai/conf/model/validation/metric/generation/fid.yaml
@@ -1,3 +1,3 @@
-# @package model.validation.generation.metrics._name_
+# @package model.validation.generation.metrics.fid
 
-_target_: moai.validation.metrics.generation.FID
+_target_: moai.validation.metrics.generation.fid.FID
