fix: change configs to work with new Omegaconf
 - clearml
- supervision

--- a/moai/conf/engine/modules/clearml.yaml
+++ b/moai/conf/engine/modules/clearml.yaml
@@ -1,4 +1,4 @@
-# @package engine.modules._name_
+# @package engine.modules.clearml
 
 _target_: moai.engine.modules.clearml.ClearML
 project_name: ???
