--- a/moai/conf/model/supervision/loss/classification/cross_entropy.yaml
+++ b/moai/conf/model/supervision/loss/classification/cross_entropy.yaml
@@ -1,4 +1,4 @@
-# @package model.supervision.losses._name_
+# @package model.supervision.losses.cross_entropy
 
 _target_: moai.supervision.losses.classification.CrossEntropy
 ignore_index: -100
