--- a/moai/conf/engine/visualization/clearml/pose2d.yaml
+++ b/moai/conf/engine/visualization/clearml/pose2d.yaml
@@ -1,4 +1,4 @@
-# @package visualization.visualizers._name_
+# @package visualization.visualizers.pose2d
 
 _target_: moai.visualization.clearml.Pose2d
 images: ['']
